examples/error/booleans.muse
// error 1 - "Lefthand value must be lvalue."
var true = false;